// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders feedback buttons (horizontal format) 1`] = `null`;

exports[`renders feedback buttons (vertical format) 1`] = `
<div
  className="feedback-buttons "
  id="feedback-3"
>
  <div
    className="btn-group-vertical"
    role="group"
    style={
      Object {
        "float": "right",
      }
    }
  >
    <button
      aria-label="Confused"
      className="feedback-button btn btn-light btn-small"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      type="button"
    >
      <test-file-stub
        className="feedback-icon"
      />
    </button>
    <button
      aria-label="Understood"
      className="feedback-button btn btn-light btn-small"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      type="button"
    >
      <test-file-stub
        className="feedback-icon"
      />
    </button>
    <button
      aria-label="give-custom-feedback"
      className="feedback-button btn btn-light btn-small"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      type="button"
    >
      <test-file-stub
        className="feedback-icon"
      />
    </button>
    <div
      id="feedback-3_response_visualizer"
      style={
        Object {
          "display": "inherit",
        }
      }
    />
  </div>
  <div
    id="response"
  />
</div>
`;

exports[`renders feedback buttons with custom messages 1`] = `
<div
  className="feedback-buttons "
  id="feedback-5"
>
  <div
    className="btn-group"
    role="group"
    style={
      Object {
        "float": "right",
      }
    }
  >
    <button
      aria-label="Confused"
      className="feedback-button btn btn-light btn-small"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      type="button"
    >
      <test-file-stub
        className="feedback-icon"
      />
    </button>
    <button
      aria-label="Understood"
      className="feedback-button btn btn-light btn-small"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      type="button"
    >
      <test-file-stub
        className="feedback-icon"
      />
    </button>
    <button
      aria-label="give-custom-feedback"
      className="feedback-button btn btn-light btn-small"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      type="button"
    >
      <test-file-stub
        className="feedback-icon"
      />
    </button>
    <div
      id="feedback-5_response_visualizer"
      style={
        Object {
          "display": "inherit",
        }
      }
    />
  </div>
  <div
    id="response"
  />
</div>
`;

exports[`renders feedback buttons without option to supply custom feedback 1`] = `
<div
  className="feedback-buttons "
  id="feedback-4"
>
  <div
    className="btn-group"
    role="group"
    style={
      Object {
        "float": "right",
      }
    }
  >
    <button
      aria-label="Confused"
      className="feedback-button btn btn-light btn-small"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      type="button"
    >
      <test-file-stub
        className="feedback-icon"
      />
    </button>
    <button
      aria-label="Understood"
      className="feedback-button btn btn-light btn-small"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      type="button"
    >
      <test-file-stub
        className="feedback-icon"
      />
    </button>
    <div
      id="feedback-4_response_visualizer"
      style={
        Object {
          "display": "inherit",
        }
      }
    />
  </div>
  <div
    id="response"
  />
</div>
`;
